# ramekin

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  build.rs  clippy.toml  compose.yml  docker-compose.yml  justfile
.github/: dotslash-config.json
.github/workflows/: ci.yml  release.yml
.quire/: config.fnl
.ramekin/: Dockerfile
.ranger/: ranger.db
assets/: Dockerfile  Dockerfile.claude  compose.yml  ramekin-prompt.md  ramekin.ts
docs/: config-redesign.md
docs/superpowers/plans/: 2026-07-14-profile-args.md
docs/superpowers/specs/: 2026-07-14-profile-args-design.md
firewall/: Cargo.toml  Dockerfile
firewall/src/: main.rs
sidecar/: Cargo.toml  Dockerfile  bridge.go  entrypoint.sh  go.mod
sidecar/src/: main.rs
skills/ramekin/: SKILL.md
src/: agent.rs  bridge.rs  config.rs  main.rs  outbox.rs  tools.rs
