[workspace]

[package]
name = "ramekin"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "*", features = ["derive"] }
color-eyre = "*"
fs-err = "*"
serde = { version = "*", features = ["derive"] }
# Pinned to prerelease — alpha.4 fixes serde defaults with bare KDL values.
serde-kdl2 = "0.1.1-alpha.4"
serde_yaml = "*"
shellexpand = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
xdg = "*"
